TEST_PROGRAMS/INVALID/04/4.go
package main

func main() {
    //Invalid float
    var x = .
    x++ // "use" x
}
